# heli-lto

./: .gitignore  AIRFRAME_MTOM_SOURCES.md  AMENDMENT_TO_EUPL_license.md  CHANGELOG.md  LICENSE  README.md  USER_GUIDE.md  heli_lto_colab_smoke_test.ipynb  heli_lto_dataiku_smoke_test.ipynb  pyproject.toml
.github/workflows/: test.yml
foca_heli/: __init__.py  airframe_mtoms.py  cli.py  csv_io.py  factory.py  formulas.py  lto.py  operational_profiles.py  strategies.py  trajectory.py
reference_data/: README.md  airframe_mtoms.csv  formula_coefficients.csv  global_constants.csv  operational_profiles.csv  piston_ei_tables.csv  trajectory_params.csv  turboshaft_particle_size.csv
tests/: test_all.py
tools/: dump_reference_data.py
